package io.github.universityTycoon;

import com.badlogic.gdx.math.Vector2;
import io.github.universityTycoon.PlaceableObjects.MapObject;

import java.util.ArrayList;

public class MapController {
    ArrayList<MapObject> mapObjects;

    public void addBuilding(Vector2 Position) {

    }
}
