package io.github.universityTycoon;

import java.util.ArrayList;

public class MapGenerator {
    final int SIZE = 64;

    public ArrayList<TerrainTypes> generate() {
        return new ArrayList<TerrainTypes>();
    }
}
