package io.github.universityTycoon;

import java.util.ArrayList;

public class ScoreCalculator {
    ArrayList<GameModifiers> activeModifiers = new ArrayList<GameModifiers>();
    int currentScore; // Possibly unnecessary
    int currentStudents;

    // This will probably need a lot of parameters
    public int calculateScore() {
        return 0;
    }
}
