@startuml
Package "Model" {
    class MapController {
        addBuilding(position)
    }
    class MapGenerator {
        size
        generate()
    }
    class Building {
        constructionGameTime
        constructionStartedAt
        isUnderConstruction
        calculateSatisfaction()
    }
    class DecorationObject {
        calculateSatisfaction()
    }
    class LeisureBuilding {

        calculateSatisfaction()
    }
    class AccommodationBuilding {
        rentPrice
        commonRooms
        calculateSatisfaction()
    }
    class TeachingBuilding {
        lectureHallCount
        labCount
        classroomCount

        calculateSatisfaction()
    }
    class Cafeteria {
        foodQuality
        hygieneRating
        calculateSatisfaction()
    }
    abstract class MapObject {
        name
        sprite
        shape
        capacity
        isStackable
        calculateSatisfaction()
    }
    class EventManager {
        eventChancePerSec
        processEvents()
    }
    class GameEvent {
        title
        description
        rarity
        iconPath
        modifiers
    }
    class ScoreCalculator {
        activeModifiers
        currentScore
        currentStudents
    }
    class GameModel {
        gameState
    }
    class AudioSelector {
        tracks
        selectTrack()
    }
}
Package "View" {
    class ScreenManager {
        create()
        render()
    }
    class MainScreen {
        create()
        render()
        input()
    }
    class MenuScreen {
        create()
        render()
    }
}
Package "Controller" {
    class PlayerInputHandler {
        PAUSE_KEY
        isMouseDown
        isPausePressed
        mousePos
        handleInput()
    }
}

Building ..|> MapObject
DecorationObject ..|> MapObject
LeisureBuilding --|> Building
AccommodationBuilding --|> Building
TeachingBuilding --|> Building
Cafeteria --|> Building

MapController -- MapGenerator
MapController -- MapObject

MainScreen -- GameModel
ScreenManager -- MainScreen
ScreenManager -- MenuScreen

PlayerInputHandler -- GameModel
PlayerInputHandler -- MainScreen

GameModel -- ScoreCalculator
GameModel -- EventManager
GameModel -- MapController
GameModel -- AudioSelector

EventManager -- GameEvent


@enduml
